Lots of changes!

--- a/index.html
+++ b/index.html
@@ -114,10 +114,20 @@
                             </script>
                             <li class="col-6-30 left box-73">
                                 <h1 class="ae-2">Bitcoin Discord Bot</h1>
-                                <p class="ae-3"><span class="opacity-8"></span>This bot gives users the ability to check
-                                    the current price of over 1000 different cryptocurrencies. It also shows BTC, ETH,
-                                    DOGE and XLM price as its status. Users can also buy and sell crypto coins. You can
-                                    even set price alerts! And the best thing is that all this is FREE!</p>
+                                <p class="ae-3"><span class="opacity-8"></span>Cryptocurrency trading has become
+                                    increasingly popular in recent years, and with good
+                                    reason. It offers the potential for high returns, and it allows individuals to take
+                                    control of their own financial future. However, trading with real money can be
+                                    risky, and not everyone is comfortable with it.</p>
+                                <p class="ae-3"><span class="opacity-8"></span>Enter the Discord bot. This handy tool
+                                    allows users to trade crypto without using
+                                    real money, which means they can gain experience and develop their skills without
+                                    risking their own funds. And the best part is that it's free to use!</p>
+                                <p class="ae-3"><span class="opacity-8"></span>One of the standout features of this
+                                    Discord bot is its crypto alerts. These alerts
+                                    let users know when the price of a particular coin reaches a certain level, which
+                                    can be incredibly useful for those who are looking to buy or sell at the right time.
+                                </p>
                                 <p class="ae-4"><span id="BotDynDescription" class="opacity-8"></span></p>
                                 <a href="https://discord.com/api/oauth2/authorize?client_id=940968101627969598&permissions=277025410048&scope=bot%20applications.commands"
                                     target="_blank" class="button blue gradient cropBottom ae-7 fromCenter"><i
@@ -130,47 +140,29 @@
                                         class="material-icons small">cloud_download</i>Source</a>
                             </li>
                             <li class="col-6-12 right ae-1 fromAbove">
-
                             </li>
                         </ul>
-
-
-                        <div class="fix-11-12">
-                            <ul class="grid fixedSpaces equal left grid-73">
-                                <li class="col-4-12 ae-3">
-                                    <a href="https://discord.com/api/oauth2/authorize?client_id=940968101627969598&permissions=277025410048&scope=bot%20applications.commands"
-                                        target="_blank" class="cell-73 rounded equalElement">
-                                        <i class="material-icons">data_usage</i>
-                                        <h3>Realtime Data</h3>
-                                        <p class="tiny opacity-6">Price data is collected in realtime. The bot
-                                            calculates the average price across multiple platforms.</p>
-                                    </a>
-                                </li>
-                                <li class="col-4-12 ae-4">
-                                    <a href="https://discord.com/api/oauth2/authorize?client_id=940968101627969598&permissions=277025410048&scope=bot%20applications.commands"
-                                        target="_blank" class="cell-73 rounded equalElement">
-                                        <i class="material-icons">attach_money</i>
-                                        <h3>Economy</h3>
-                                        <p class="tiny opacity-6">You can send coins within Discord's users. You can
-                                            even sell and buy coins!</p>
-                                    </a>
-                                </li>
-                                <li class="col-4-12 ae-4">
-                                    <a href="#DiscordBot" target="" class="cell-73 rounded equalElement">
-                                        <i class="material-icons">notifications</i>
-                                        <h3>Price alerts</h3>
-                                        <p class="tiny opacity-6">When the price reaches the set amount the bot will
-                                            send you a direct message to you.</p>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
                     </div>
-
                 </div>
             </div>
         </div>
         <div class="background" style="background-image:url(assets/img/background/img-73.jpg)"></div>
+        <nav class="panel bottom">
+            <div class="sections desktop">
+                <div class="left">
+                    <ul class="menu uppercase">
+                        <li><a href="./DiscordBot/index.html" target="_blank">View Discord Bot Legal Documents</a></li>
+                    </ul>
+                </div>
+                <div class="right">
+                    <ul class="menu crop">
+                        <li><a href="#" target="_blank"><svg>
+                                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#discord"></use>
+                                </svg></a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </section>
     <!-- Games (#89) -->
     <section data-name="Games" class="slide fade-6 kenBurns">
@@ -183,16 +175,19 @@
                             <li class="col-6-12 fromBottomLeft">
                                 <h1 class="ae-2">Games</h1>
                                 <div class="ae-3">
-                                    <p class="opacity-8">Inactively developing a teamplay based first-person shooter
-                                        multiplayer game. Where attackers are trying to capture one of the sites from
-                                        defenders and plant the bomb. If the bomb explodes the attackers will win the
-                                        round. If the defenders defuses the bomb in time defenders will win the round.
-                                        Just like in CS.</p>
+                                    <p class="opacity-8">The teamplay-based first-person shooter multiplayer game that
+                                        was being inactively developed is pretty much dead. The game involved attackers
+                                        trying to capture one of the sites from defenders and plant a bomb. If the bomb
+                                        exploded, the attackers would win the round, but if the defenders defused it in
+                                        time, the defenders would win the round. It was similar to the popular game
+                                        Counter-Strike.</p>
+                                    <p class="opacity-8">If you would like to try it, send me a email so I can give you
+                                        a key!</p>
                                 </div>
                                 <ul class="flex">
                                     <li class="col-6-12 ae-3">
                                         <h3 class="margin-top-3">Supported Platforms</h3>
-                                        <p class="tiny opacity-6">Aiming for Windows and Linux native support.</p>
+                                        <p class="tiny opacity-6">Windows and Linux</p>
                                     </li>
                                     <li class="col-6-12 ae-4">
                                         <h3 class="margin-top-3">Genre</h3>
@@ -212,8 +207,53 @@
                             <li class="col-5-12 bottom">
                                 <img src="assets/img/BerylliumPromo.jpg" data-action="zoom" class="shadow rounded ae-8"
                                     alt="Image" />
+                                <br><br>
                                 <img src="assets/img/BerylliumPromo2.jpg" data-action="zoom" class="shadow rounded ae-8"
                                     alt="Image" />
+                            </li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <div class="background" style="background-image: url(assets/img/background/be_bacground.png) "></div>
+    </section>
+
+    <section data-name="cipher" class="slide fade-6 kenBurns">
+        <div class="content">
+            <div class="container">
+                <div class="wrap">
+
+                    <div class="fix-12-12">
+                        <ul class="flex left">
+                            <li class="col-6-12 fromBottomLeft">
+                                <h1 class="ae-2">Cipher</h1>
+                                <div class="ae-3">
+                                    <p class="opacity-8">Ladies and gentlemen, let me tell you, we have the best, the
+                                        most amazing, the most fantastic p2p communication web app out there, and it's
+                                        coming soon, believe me. It's called Cipher, and it's gonna be really secure.
+                                        With Cipher, you'll be able to send messages to your friends, your family, your
+                                        business associates, anyone you want, and every single message will be
+                                        end-to-end encrypted. That means no one, and I mean no one, can read your
+                                        messages except you and the person you're sending them to. It's top secret, it's
+                                        super secure, and it's gonna make you the envy of all your friends. So stay
+                                        tuned, because Cipher is coming soon, and it's gonna be very secure!
+                                    </p>
+                                </div>
+                                <!--
+                                <ul class="flex">
+                                    <a href="https://cdn.r3ne.net/win" target="_blank"
+                                        class="button blue gradient cropBottom ae-7 fromCenter"><i
+                                            class="material-icons small">add_box</i>Learn More</a>
+                                </ul>
+                                -->
+                            <li class="col-1-12">&nbsp;</li>
+                            <li class="col-5-12 bottom">
+                                <br><br><br><br><br>
+                                <img src="assets/img/cipherSimple.png" data-action="zoom" class="shadow rounded ae-8"
+                                    alt="Image" />
+                            </li>
                             </li>
                         </ul>
                     </div>
@@ -317,9 +357,12 @@
             <div class="container">
                 <div class="wrap">
 
-                    <div class="fix-6-12">
+                    <div class="fix-9-12">
                         <h1 class="huge ae-1 margin-bottom-2">Contact</h1>
-                        <p class="hero ae-2 margin-bottom-3"><span class="opacity-8">mail@r3ne.net</span></p>
+                        <p class="hero ae-2 margin-bottom-3"><span class="opacity-8">If you have any questions or would
+                                like to get in touch, you can contact me at mail@r3ne.net. I'll be happy to hear from
+                                you! Additionally, you can find a link to my GitHub profile below, where you can
+                                find some of the projects I've worked on. Thanks for checking it out!</span></p>
                         <a href="https://github.com/JAAKKQ" target="_blank" class="button hollow ae-5"><img
                                 src="assets/img/GitHub_Logo_White.png" height="63" /></a>
                     </div>
@@ -329,24 +372,6 @@
         </div>
         <div class="background" style="background-image: url(assets/img/background/Page_Background.png)"></div>
     </section>
-
-    <!-- Panel Bottom #12 -->
-    <nav class="panel bottom lastSlideOnly">
-        <div class="sections desktop">
-            <div class="left">
-                <ul class="menu uppercase">
-                    <li><a href="./DiscordBot/index.html" target="_blank">View Discord Bot Legal Documents</a></li>
-                </ul>
-            </div>
-            <div class="right">
-                <ul class="menu crop">
-                    <li><a href="#" target="_blank"><svg>
-                                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#discord"></use>
-                            </svg></a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
     <!-- Loading Progress Bar -->
     <div class="progress-bar darkGreen"></div>
 
