--- a/DiscordBot/index.html
+++ b/DiscordBot/index.html
@@ -1,23 +1,35 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Legal Documents</title>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-6DMDXB08ZY"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-6DMDXB08ZY');
+	</script>
 </head>
+
 <body>
-<h1 style="text-align: center;">View Documents</h1>
+	<h1 style="text-align: center;">View Documents</h1>
 
-<form action="./terms.html">
-<p style="text-align: center;"><input type="submit" value="View Terms of Service" /></p>
-</form>
+	<form action="./terms.html">
+		<p style="text-align: center;"><input type="submit" value="View Terms of Service" /></p>
+	</form>
 
-<form action="./privacy.html">
-<p style="text-align: center;"><input type="submit" value="View Privacy Policy" /></p>
-</form>
+	<form action="./privacy.html">
+		<p style="text-align: center;"><input type="submit" value="View Privacy Policy" /></p>
+	</form>
 
-<form action="https://r3ne.net/">
-<p style="text-align: center;"><input type="submit" value="Go Home" /></p>
-</form>
+	<form action="https://r3ne.net/">
+		<p style="text-align: center;"><input type="submit" value="Go Home" /></p>
+	</form>
 
-<p></p>
+	<p></p>
 </body>
+
 </html>
