--- a/InternetWSOY2021107s12r/Internet. WSOY 2021. 107 s. 12 r.html
+++ b/InternetWSOY2021107s12r/Internet. WSOY 2021. 107 s. 12 r.html
@@ -5,7 +5,16 @@
     <title>107 s. 12 r.</title>
     <meta http-equiv="refresh" content="0; url = https://www.wsoy.fi/kirja/mikko-hypponen/internet/9789510464410" />
     <meta name="Description" CONTENT="107 s. 12 r.">
-    <meta name="keywords" content="107 s. 12 r."/>
+    <meta name="keywords" content="107 s. 12 r." />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6DMDXB08ZY"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-6DMDXB08ZY');
+    </script>
 </head>
 
 <body>
