--- a/DiscordBot/privacy.html
+++ b/DiscordBot/privacy.html
@@ -1,6 +1,15 @@
 <html>
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6DMDXB08ZY"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-6DMDXB08ZY');
+    </script>
     <title>Privacy.</title>
     <meta content="text/html; charset=UTF-8" http-equiv="content-type">
     <style type="text/css">
