--- a/DiscordBot/terms.html
+++ b/DiscordBot/terms.html
@@ -216,6 +216,15 @@
             text-align: left
         }
     </style>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6DMDXB08ZY"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-6DMDXB08ZY');
+    </script>
 </head>
 
 <body class="c3">
