--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         </div>
         <div class="background" style="background-image: url(assets/img/background/be_bacground.png) "></div>
     </section>
-
+<!--cipher-->
     <section data-name="cipher" class="slide fade-6 kenBurns">
         <div class="content">
             <div class="container">
@@ -252,7 +252,7 @@
                                 </div>
                                 <!--
                                 <ul class="flex">
-                                    <a href="https://cdn.r3ne.net/win" target="_blank"
+                                    <a href="https://chat.r3ne.net/" target="_blank"
                                         class="button blue gradient cropBottom ae-7 fromCenter"><i
                                             class="material-icons small">add_box</i>Learn More</a>
                                 </ul>
@@ -270,7 +270,7 @@
                 </div>
             </div>
         </div>
-        <div class="background" style="background-image: url(assets/img/background/be_bacground.png) "></div>
+        <div class="background" style="background-image: url(assets/img/background/cipher_background.gif) "></div>
     </section>
 
     <!-- Popup Video -->
