--- a/index.html
+++ b/index.html
@@ -72,11 +72,12 @@
         <div class="content">
             <div class="container">
                 <div class="wrap">
-                    <div class="fix-8-12 noSelect">
-                        <div class="fix-7-12 margin-top-2">
+                    <div class="fix-6-12 noSelect">
+                        <div class="fix-5-12 margin-top-2">
                             <h1 class="ae-5 fronLeft">R3ne</h1>
                             <div class="light ae-6 fromrRight">
-                                <p class="opacity-8">I make games, software and other cool stuff.</p>
+                                <p class="opacity-8">I am a developer who enjoys creating games, software, and other
+                                    cool projects.</p>
                             </div>
                         </div>
                     </div>
@@ -111,7 +112,6 @@
         <div class="content">
             <div class="container">
                 <div class="wrap">
-
                     <div class="fix-11-12">
                         <ul class="flex reverse">
                             <script>
@@ -123,21 +123,14 @@
                             </script>
                             <li class="col-6-30 left box-73">
                                 <h1 class="ae-2">Bitcoin Discord Bot</h1>
-                                <p class="ae-3"><span class="opacity-8"></span>Cryptocurrency trading has become
-                                    increasingly popular in recent years, and with good
-                                    reason. It offers the potential for high returns, and it allows individuals to take
-                                    control of their own financial future. However, trading with real money can be
-                                    risky, and not everyone is comfortable with it.</p>
-                                <p class="ae-3"><span class="opacity-8"></span>Enter the Discord bot. This handy tool
-                                    allows users to trade crypto without using
-                                    real money, which means they can gain experience and develop their skills without
-                                    risking their own funds. And the best part is that it's free to use!</p>
-                                <p class="ae-3"><span class="opacity-8"></span>One of the standout features of this
-                                    Discord bot is its crypto alerts. These alerts
-                                    let users know when the price of a particular coin reaches a certain level, which
-                                    can be incredibly useful for those who are looking to buy or sell at the right time.
+                                <p class="ae-3"><span class="opacity-8"></span>Cryptocurrency trading has become popular
+                                    due to the potential for high returns and control over financial future. However, it
+                                    can be risky. This Discord bot allows users to trade crypto without real money,
+                                    allowing them to gain experience and develop skills without risk. It also offers
+                                    free crypto alerts to inform users when the price of a coin reaches a certain level
                                 </p>
-                                <p class="ae-4"><span id="BotDynDescription" class="opacity-8"></span></p>
+                                <p class="ae-4"><span id="BotDynDescription" class="opacity-8">Currently serving 0
+                                        Discord servers with 0 users in total.</span></p>
                                 <a href="https://discord.com/api/oauth2/authorize?client_id=940968101627969598&permissions=277025410048&scope=bot%20applications.commands"
                                     target="_blank" class="button blue gradient cropBottom ae-7 fromCenter"><i
                                         class="material-icons small">add_box</i>Invite Bot</a>
@@ -160,7 +153,7 @@
             <div class="sections desktop">
                 <div class="left">
                     <ul class="menu uppercase">
-                        <li><a href="./DiscordBot/index.html" target="_blank">View Discord Bot Legal Documents</a></li>
+                        <li><a href="./DiscordBot/index.html" target="_blank">View Legal Documents</a></li>
                     </ul>
                 </div>
                 <div class="right">
@@ -182,35 +175,17 @@
                     <div class="fix-12-12">
                         <ul class="flex left">
                             <li class="col-6-12 fromBottomLeft">
-                                <h1 class="ae-2">Games</h1>
+                                <h1 class="ae-2">Beryllium</h1>
                                 <div class="ae-3">
-                                    <p class="opacity-8">The teamplay-based first-person shooter multiplayer game that
-                                        was being inactively developed is pretty much dead. The game involved attackers
-                                        trying to capture one of the sites from defenders and plant a bomb. If the bomb
-                                        exploded, the attackers would win the round, but if the defenders defused it in
-                                        time, the defenders would win the round. It was similar to the popular game
-                                        Counter-Strike.</p>
+                                    <p class="opacity-8">Beryllium was a first-person shooter multiplayer game pitting
+                                        terrorists and counter-terrorists against each other. The terrorists' goal was
+                                        to plant a bomb and the counter-terrorists' goal was to defuse it. Players could
+                                        also win by eliminating all members of the opposing team. However, the
+                                        development of
+                                        Beryllium has been halted.</p>
                                     <p class="opacity-8">If you would like to try it, send me a email so I can give you
                                         a key!</p>
                                 </div>
-                                <ul class="flex">
-                                    <li class="col-6-12 ae-3">
-                                        <h3 class="margin-top-3">Supported Platforms</h3>
-                                        <p class="tiny opacity-6">Windows and Linux</p>
-                                    </li>
-                                    <li class="col-6-12 ae-4">
-                                        <h3 class="margin-top-3">Genre</h3>
-                                        <p class="tiny opacity-6">FPS multiplayer</p>
-                                    </li>
-                                    <!--
-                                    <a href="https://cdn.r3ne.net/win"
-                                        target="_blank" class="button blue gradient cropBottom ae-7 fromCenter"><i
-                                            class="material-icons small">add_box</i>Download Win64</a>
-                                    <a href="https://cdn.r3ne.net/linux"
-                                        target="_blank" class="button blue gradient cropBottom ae-7 fromCenter"><i
-                                            class="material-icons small">add_box</i>Download Linux</a>
-                                            -->
-                                </ul>
                             </li>
                             <li class="col-1-12">&nbsp;</li>
                             <li class="col-5-12 bottom">
@@ -228,7 +203,7 @@
         </div>
         <div class="background" style="background-image: url(assets/img/background/be_bacground.png) "></div>
     </section>
-<!--cipher-->
+    <!--cipher-->
     <section data-name="cipher" class="slide fade-6 kenBurns">
         <div class="content">
             <div class="container">
@@ -241,13 +216,9 @@
                                 <div class="ae-3">
                                     <p class="opacity-8">Ladies and gentlemen, let me tell you, we have the best, the
                                         most amazing, the most fantastic p2p communication web app out there, and it's
-                                        coming soon, believe me. It's called Cipher, and it's gonna be really secure.
-                                        With Cipher, you'll be able to send messages to your friends, your family, your
-                                        business associates, anyone you want, and every single message will be
-                                        end-to-end encrypted. That means no one, and I mean no one, can read your
-                                        messages except you and the person you're sending them to. It's top secret, it's
-                                        super secure, and it's gonna make you the envy of all your friends. So stay
-                                        tuned, because Cipher is coming soon, and it's gonna be very secure!
+                                        coming soon, believe me. Introducing Cipher, a secure p2p communication web app
+                                        coming soon. End-to-end encryption ensures that only the sender and recipient
+                                        can read messages. Stay tuned for the highly secure Cipher.
                                     </p>
                                 </div>
                                 <!--
@@ -258,8 +229,7 @@
                                 </ul>
                                 -->
                             <li class="col-1-12">&nbsp;</li>
-                            <li class="col-5-12 bottom">
-                                <br><br><br><br><br>
+                            <li class="col-4-12 bottom">
                                 <img src="assets/img/cipherSimple.png" data-action="zoom" class="shadow rounded ae-8"
                                     alt="Image" />
                             </li>
@@ -305,7 +275,7 @@
 
                     <div class="fix-10-12">
                         <ul class="grid grid-74 later equal margin-top-5">
-                            <li class="col-2-12 ae-5">
+                            <li class="col-3-12 ae-5">
                                 <a class="box-74">
                                     <!--
                                     <div class="thumbnail-74">
@@ -322,32 +292,34 @@
                                     -->
                                 </a>
                             </li>
-                            <li class="col-4-12 ae-5">
+                            <li class="col-3-12 ae-5">
                                 <a class="box-74">
-                                    <div class="thumbnail-74">
-                                        <img src="assets/img/Bitcoin-QR.png" class="wide" alt="Thumbnail" />
-                                    </div>
                                     <div class="name-74 equalElement table wide">
                                         <div class="cell center top">
                                             <h3>₿itcoin</h3>
-                                            <textarea readonly>326vnwLjsjjjFHg56jHNEVCGGXGh2WQZUE</textarea>
-                                            <p class="tiny opacity-7 cropBottom">Copy the raw BTC address above^</p>
-                                            <p class="tiny opacity-7 cropBottom">or use the QR code.</p>
+                                            <div class="thumbnail-74">
+                                                <img src="assets/img/Bitcoin-QR.png" class="wide" alt="Thumbnail" />
+                                            </div>
+                                            <textarea readonly
+                                                style="resize: none">326vnwLjsjjjFHg56jHNEVCGGXGh2WQZUE</textarea>
+                                            <p class="tiny opacity-7 cropBottom">This is not a donation, it is a
+                                                contribution!</p>
                                         </div>
                                     </div>
                                 </a>
                             </li>
-                            <li class="col-4-12 ae-5">
+                            <li class="col-3-12 ae-5">
                                 <a class="box-74">
-                                    <div class="thumbnail-74">
-                                        <img src="assets/img/Ethereum-QR.png" class="wide" alt="Thumbnail" />
-                                    </div>
                                     <div class="name-74 equalElement table wide">
                                         <div class="cell center top">
                                             <h3>Ξthereum</h3>
-                                            <textarea readonly>0x7ff709898f402FF35079993B020974A1F7895999</textarea>
-                                            <p class="tiny opacity-7 cropBottom">Copy the raw ETH address above^</p>
-                                            <p class="tiny opacity-7 cropBottom">or use the QR code.</p>
+                                            <div class="thumbnail-74">
+                                                <img src="assets/img/Ethereum-QR.png" class="wide" alt="Thumbnail" />
+                                            </div>
+                                            <textarea readonly
+                                                style="resize: none">0x7ff709898f402FF35079993B020974A1F7895999</textarea>
+                                            <p class="tiny opacity-7 cropBottom">This is not a donation, it is a
+                                                contribution!</p>
                                         </div>
                                     </div>
                                 </a>
@@ -367,11 +339,7 @@
                 <div class="wrap">
 
                     <div class="fix-9-12">
-                        <h1 class="huge ae-1 margin-bottom-2">Contact</h1>
-                        <p class="hero ae-2 margin-bottom-3"><span class="opacity-8">If you have any questions or would
-                                like to get in touch, you can contact me at mail@r3ne.net. I'll be happy to hear from
-                                you! Additionally, you can find a link to my GitHub profile below, where you can
-                                find some of the projects I've worked on. Thanks for checking it out!</span></p>
+                        <p class="hero ae-2 margin-bottom-3"><span class="opacity-8">Email: mail@r3ne.net</span></p>
                         <a href="https://github.com/JAAKKQ" target="_blank" class="button hollow ae-5"><img
                                 src="assets/img/GitHub_Logo_White.png" height="63" /></a>
                     </div>
