--- a/records/index.html
+++ b/records/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="logo.gif">
-    <title>Jakem Levyt</title>
+    <title>Rene Levyt</title>
 </head>
 
 <body>
