--- a/records/index.html
+++ b/records/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- search.html -->
     <form id="search-form">
-        <input type="text" id="search-input" placeholder="Search records...">
+        <input type="text" id="search-input" placeholder="Search records..." autocomplete="off">
         <button type="submit">Search</button>
     </form>
 
