--- a/records/index.html
+++ b/records/index.html
@@ -12,10 +12,12 @@
 
 <body>
     <!-- search.html -->
+    <img src="record.png" alt="Spinning record" id="record-left">
+    <img src="record.png" alt="Spinning record" id="record-right">
+
     <form id="search-form">
         <input type="text" id="search-input" placeholder="Search records..." autocomplete="off">
     </form>
-
     <div id="results"></div>
     <script src="search.js"></script>
 </body>
