--- a/records/index.html
+++ b/records/index.html
@@ -12,8 +12,11 @@
 
 <body>
     <!-- search.html -->
-    <img src="record.png" alt="Spinning record" id="record-left">
-    <img src="record.png" alt="Spinning record" id="record-right">
+    <!-- Add records to the page -->
+    <div class="record left"></div>
+    <div class="record right"></div>
+
+
 
     <form id="search-form">
         <input type="text" id="search-input" placeholder="Search records..." autocomplete="off">
