--- a/records/index.html
+++ b/records/index.html
@@ -13,9 +13,11 @@
 <body>
     <!-- search.html -->
     <!-- Add records to the page -->
-    <div class="record left"></div>
-    <div class="record right"></div>
-
+    <div class="container">
+        <div class="record left"></div>
+        <div class="record right"></div>
+      </div>
+      
     <form id="search-form">
         <input type="text" id="search-input" placeholder="Search records..." autocomplete="off">
     </form>
