--- a/records/index.html
+++ b/records/index.html
@@ -15,12 +15,13 @@
     <!-- Add records to the page -->
     <div class="record left"></div>
     <div class="record right"></div>
-    
     <form id="search-form">
         <input type="text" id="search-input" placeholder="Search records..." autocomplete="off">
     </form>
-    <div id="results"></div>
-    <script src="search.js"></script>
+    <div class="container">
+        <div id="results"></div>
+        <script src="search.js"></script>
+    </div>
 </body>
 
 </html>
