--- a/index.html
+++ b/index.html
@@ -217,7 +217,49 @@
         </div>
         <div class="background" style="background-image: url(assets/img/background/cipher_background.gif) "></div>
     </section>
+    <!--vinylDB-->
+    <section data-name="vinylDB" class="slide fade-6 kenBurns">
+        <div class="content">
+            <div class="container">
+                <div class="wrap">
+                    <div class="fix-12-12">
+                        <ul class="flex left">
+                            <li class="col-6-12 fromBottomLeft">
+                                <h1 class="ae-2">Vinyl Record Collection Manager</h1>
+                                <div class="ae-3">
+                                    <p class="opacity-8">A command-line interface (CLI) program that allows easy access
+                                        and management of personal vinyl record collection. Utilizes the Discogs API to
+                                        retrieve information about records and allows search by query. User
+                                        can also use commands to perform actions such as viewing, sorting, deleting
+                                        records, and creating custom records. Convenient tool for vinyl collectors who
+                                        want to keep track of their collection and access information quickly and easily
+                                        from the command line.
+                                    </p>
+                                </div>
+                                <a href="https://r3ne.net/records/" target="_blank"
+                                    class="button blue gradient cropBottom ae-7 fromCenter"><i
+                                        class="material-icons small">playlist_play</i>My Collection</a>
+                                <a href="https://github.com/JAAKKQ/myVinylDB" target="_blank"
+                                    class="button blue gradient cropBottom ae-7 fromCenter"><i
+                                        class="material-icons small">cloud_download</i>Source</a>
+                            <li class="col-1-12">&nbsp;</li>
+                            <li class="col-5-12 bottom">
+                                <img src="assets/img/Screenshot-vinyldb-console.png" data-action="zoom"
+                                    class="shadow rounded ae-8" alt="Image" />
+                                <br><br>
+                                <img src="assets/img/Screenshot-vinyldb.png" data-action="zoom"
+                                    class="shadow rounded ae-8" alt="Image" />
 
+                            </li>
+                            </li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <div class="background" style="background-image: url(assets/img/background/myGuy.jpeg) "></div>
+    </section>
     <!-- Popup Video -->
     <div class="popup autoplay" data-popup-id="89-4">
         <div class="close"><svg>
@@ -237,7 +279,7 @@
         </div>
     </div>
 
-    <!-- Coins -->
+    <!-- Coins 
     <section data-name="GiveMeMoney" class="slide fade-6 kenBurns">
         <div class="content">
             <div class="container">
@@ -252,7 +294,6 @@
                         <ul class="grid grid-74 later equal margin-top-5">
                             <li class="col-3-12 ae-5">
                                 <a class="box-74">
-                                    <!--
                                     <div class="thumbnail-74">
                                         <img src="assets/img/Bitcoin-QR.png" class="wide" alt="Thumbnail" />
                                     </div>
@@ -265,6 +306,7 @@
                                         </div>
                                     </div>
                                     -->
+    <!--
                                 </a>
                             </li>
                             <li class="col-3-12 ae-5">
@@ -306,6 +348,7 @@
         </div>
         <div class="background" style="background-image:url(assets/img/background/SendMoneyPLS.jpg)"></div>
     </section>
+-->
 
     <!-- End (#95) -->
     <section data-name="TheEnd" class="slide fade-6 kenBurns">
