--- a/records/moreinfo.html
+++ b/records/moreinfo.html
@@ -5,6 +5,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="record-info">
+        <h2 id="record-title"></h2>
+        <p id="record-artist"></p>
+        <p id="record-year"></p>
+        <p id="record-genre"></p>
+        <p id="record-format"></p>
+        <p id="record-label"></p>
+        <ul id="record-songs"></ul>
+    </div>
     <button id="back-button">Back</button>
     <script src="moreinfo.js"></script>
 </body>
