--- a/records/moreinfo.html
+++ b/records/moreinfo.html
@@ -12,7 +12,7 @@
         <p id="record-genre"></p>
         <p id="record-format"></p>
         <p id="record-label"></p>
-        <ul id="record-songs"></ul>
+        <ul class="song-list" id="record-songs"></ul>
     </div>
     <button id="back-button">Back</button>
     <script src="moreinfo.js"></script>
