--- a/records/moreinfo.html
+++ b/records/moreinfo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>More Information</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="morestyle.css">
 </head>
 <body>
     <div id="record-info">
@@ -12,7 +12,7 @@
         <p id="record-genre"></p>
         <p id="record-format"></p>
         <p id="record-label"></p>
-        <ul class="song-list" id="record-songs"></ul>
+        <ul id="record-songs"></ul>
     </div>
     <button id="back-button">Back</button>
     <script src="moreinfo.js"></script>
