--- a/records/moreinfo.html
+++ b/records/moreinfo.html
@@ -12,6 +12,7 @@
         <p id="record-genre"></p>
         <p id="record-format"></p>
         <p id="record-label"></p>
+        <h3>Songs:</h3>
         <ul id="record-songs"></ul>
     </div>
     <button id="back-button">Back</button>
