--- a/records/moreinfo.html
+++ b/records/moreinfo.html
@@ -7,17 +7,19 @@
 </head>
 
 <body>
-    <div class="records" id="record-info">
-        <h2 id="record-title"></h2>
-        <p id="record-artist"></p>
-        <p id="record-year"></p>
-        <p id="record-genre"></p>
-        <p id="record-format"></p>
-        <p id="record-label"></p>
-    </div>
-    <div class="songs">
-        <h3>Songs:</h3>
-        <ul id="record-songs"></ul>
+    <div id="record-info">
+        <div class="records">
+            <h2 id="record-title"></h2>
+            <p id="record-artist"></p>
+            <p id="record-year"></p>
+            <p id="record-genre"></p>
+            <p id="record-format"></p>
+            <p id="record-label"></p>
+        </div>
+        <div class="songs">
+            <h3>Songs:</h3>
+            <ul id="record-songs"></ul>
+        </div>
     </div>
     <button id="back-button">Back</button>
     <script src="moreinfo.js"></script>
