--- a/records/moreinfo.html
+++ b/records/moreinfo.html
@@ -15,6 +15,10 @@
             <p id="record-format"></p>
             <p id="record-label"></p>
         </div>
+        <div class="prices">
+            <h3>Songs:</h3>
+            <ul id="record-prices"></ul>
+        </div>
         <div class="songs">
             <h3>Songs:</h3>
             <ul id="record-songs"></ul>
