--- a/records/moreinfo.html
+++ b/records/moreinfo.html
@@ -20,8 +20,8 @@
             <ul id="record-prices"></ul>
         </div>
         <div class="songs">
-            <h3>Songs:</h3>
-            <ul id="record-songs"></ul>
+            <h3>Prices:</h3>
+            <ul id="record-prices"></ul>
         </div>
     </div>
     <button id="back-button">Back</button>
