--- a/records/moreinfo.html
+++ b/records/moreinfo.html
@@ -15,9 +15,13 @@
             <p id="record-format"></p>
             <p id="record-label"></p>
         </div>
-        <div class="songs">
+        <div class="prices">
             <h3>Prices:</h3>
             <ul id="record-prices"></ul>
+        </div>
+        <div class="songs">
+            <h3>Songs:</h3>
+            <ul id="record-songs"></ul>
         </div>
     </div>
     <button id="back-button">Back</button>
