--- a/records/moreinfo.html
+++ b/records/moreinfo.html
@@ -14,12 +14,12 @@
             <p id="record-genre"></p>
             <p id="record-format"></p>
             <p id="record-label"></p>
-            <h3>Songs:</h3>
-            <ul id="record-songs"></ul>
-        </div>
-        <div class="prices">
             <h3>Prices:</h3>
             <ul id="record-prices"></ul>
+        </div>
+        <div class="songs">
+            <h3>Songs:</h3>
+            <ul id="record-songs"></ul>
         </div>
     </div>
     <button id="back-button">Back</button>
