--- a/records/moreinfo.html
+++ b/records/moreinfo.html
@@ -18,7 +18,7 @@
             <h3>Prices:</h3>
             <ul id="record-prices"></ul>
         </div>
-        <div class="songs">
+        <div style="padding-top: 36px;" class="songs">
             <h3>Songs:</h3>
             <ul id="record-songs"></ul>
         </div>
