--- a/records/moreinfo.html
+++ b/records/moreinfo.html
@@ -8,7 +8,7 @@
 
 <body>
     <div id="record-info">
-        <dir id="record-cover"></dir>
+        <div id="record-cover"></div>
         <div class="records">
             <h2 id="record-title"></h2>
             <p id="record-artist"></p>
@@ -19,9 +19,11 @@
             <h3>Prices:</h3>
             <ul id="record-prices"></ul>
         </div>
-        <div style="padding-top: 36px;" class="songs">
-            <h3>Songs:</h3>
-            <ul id="record-songs"></ul>
+        <div id="record-songs-container">
+            <div style="padding-top: 36px;" class="songs">
+                <h3>Songs:</h3>
+                <ul id="record-songs"></ul>
+            </div>
         </div>
     </div>
     <button id="back-button">Back</button>
