--- a/records/moreinfo.html
+++ b/records/moreinfo.html
@@ -20,7 +20,7 @@
             <ul id="record-prices"></ul>
         </div>
         <div id="record-songs-container">
-            <div style="padding-top: 36px;" class="songs">
+            <div class="songs">
                 <h3>Songs:</h3>
                 <ul id="record-songs"></ul>
             </div>
