--- a/records/moreinfo.html
+++ b/records/moreinfo.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>More Information</title>
+    <link rel="icon" href="logo.gif"
     <link rel="stylesheet" href="morestyle.css">
 </head>
 
