--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         </div>
         <div class="background" style="background-image: url(assets/img/background/be_bacground.png) "></div>
     </section>
-    <!--cipher-->
+    <!--cipher
     <section data-name="cipher" class="slide fade-6 kenBurns">
         <div class="content">
             <div class="container">
@@ -196,13 +196,6 @@
                                         can read messages. Stay tuned for the highly secure Cipher.
                                     </p>
                                 </div>
-                                <!--
-                                <ul class="flex">
-                                    <a href="https://chat.r3ne.net/" target="_blank"
-                                        class="button blue gradient cropBottom ae-7 fromCenter"><i
-                                            class="material-icons small">add_box</i>Learn More</a>
-                                </ul>
-                                -->
                             <li class="col-1-12">&nbsp;</li>
                             <li class="col-4-12 bottom">
                                 <img src="assets/img/cipherSimple.png" data-action="zoom" class="shadow rounded ae-8"
@@ -217,6 +210,7 @@
         </div>
         <div class="background" style="background-image: url(assets/img/background/cipher_background.gif) "></div>
     </section>
+-->
     <!--vinylDB-->
     <section data-name="vinylDB" class="slide fade-6 kenBurns">
         <div class="content">
