--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <div class="fix-5-12 margin-top-2">
                             <h1 class="ae-5 fronLeft">R3ne</h1>
                             <div class="light ae-6 fromrRight">
-                                <p class="opacity-8">I am a developer who enjoys creating games, software, and other
+                                <p class="opacity-8">I am a technology enthusiast who enjoys creating games, software, and other
                                     cool projects.</p>
                             </div>
                         </div>
