--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                 <div class="wrap">
 
                     <div class="fix-9-12">
-                        <p class="hero ae-2 margin-bottom-3"><span class="opacity-8">Email: mail@r3ne.net</span></p>
+                        <p class="hero ae-2 margin-bottom-3"><span class="opacity-8">mail@r3ne.net</span></p>
                         <a href="https://github.com/JAAKKQ" target="_blank" class="button hollow ae-5"><img
                                 src="assets/img/GitHub_Logo_White.png" height="63" /></a>
                     </div>
